# miku

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  notes.html
.github/workflows/: ci.yml
.sisyphus/run-continuation/: ses_1a7a697b3ffe1Kvz3Gem4jv1JV.json
cmd/: CMakeLists.txt
cmd/miku-api/: main.c
cmd/miku-crontask/: main.c
cmd/miku-dev/: main.c
cmd/miku-msggateway/: main.c
cmd/miku-msgtransfer/: main.c
cmd/miku-push/: main.c
cmd/miku-rpc-auth/: main.c
cmd/miku-rpc-conversation/: main.c
cmd/miku-rpc-friend/: main.c
cmd/miku-rpc-group/: main.c
cmd/miku-rpc-msg/: main.c
cmd/miku-rpc-third/: main.c
cmd/miku-rpc-user/: main.c
config/: kafka.yml  log.yml  miku-example.yml  mongodb.yml  redis.yml  share.yml
deploy/docker/: docker-compose.yml
deploy/helm/miku/: Chart.yaml  values.yaml
deploy/helm/miku/templates/: configmap.yaml  deployments.yaml
deploy/k8s/: deployment.yaml  rpc-services.yaml
deploy/systemd/: install.sh  miku-api.service  miku-msggateway.service  miku-rpc-auth.service
docs/: Wiki.md  index.html  openapi.yaml
scripts/: bench.sh
src/discovery/: CMakeLists.txt  miku_discovery.c  miku_discovery.h
src/foundation/: CMakeLists.txt  miku_arena.c  miku_arena.h  miku_atomic.h  miku_base64.c  miku_base64.h  miku_common.h  miku_config.c  miku_config.h  miku_crc32.c  miku_crc32.h  miku_error.c  miku_error.h  miku_graceful.c  miku_graceful.h  miku_hash.c  miku_hash.h  miku_hashmap.c  miku_hashmap.h  miku_json_util.h  miku_list.h  miku_log.c  miku_log.h  miku_memory.c  miku_memory.h  miku_rbtree.c  miku_rbtree.h  miku_service_config.c  miku_service_config.h  miku_sha1.c  miku_sha1.h  miku_slab.c  miku_slab.h  miku_spinlock.h  miku_stats.c  miku_stats.h  miku_string.c  miku_string.h  miku_thread.c  miku_thread.h  (+5 more)
src/gateway/: CMakeLists.txt
src/gateway/api/: miku_api.c  miku_api.h
src/gateway/crontask/: miku_cron_tasks.c  miku_cron_tasks.h  miku_crontask.c  miku_crontask.h
src/gateway/msggateway/: miku_im_message.c  miku_im_message.h  miku_msggateway.c  miku_msggateway.h  miku_msggw_ws_ops.c  miku_msggw_ws_ops.h  miku_ws_subscription.c  miku_ws_subscription.h
src/gateway/msgtransfer/: miku_msgtransfer.c  miku_msgtransfer.h  miku_mt_pipeline.c  miku_mt_pipeline.h
src/gateway/push/: miku_offline_push.c  miku_offline_push.h  miku_push.c  miku_push.h
src/models/: CMakeLists.txt  miku_models.c  miku_models.h
src/protocol/: CMakeLists.txt  miku_gzip.c  miku_gzip.h  miku_http.c  miku_http.h  miku_http_client.c  miku_http_client.h  miku_http_server.c  miku_http_server.h  miku_json.c  miku_json.h  miku_middleware.c  miku_middleware.h  miku_pb.c  miku_pb.h  miku_protocol.c  miku_protocol.h  miku_ratelimit.c  miku_ratelimit.h  miku_rpc.c  miku_rpc.h  miku_rpc_client.c  miku_rpc_client.h  miku_rpc_cmd.h  miku_rpc_server.c  miku_rpc_server.h  miku_webhook.c  miku_webhook.h  miku_websocket.c  miku_websocket.h
src/runtime/: CMakeLists.txt  miku_async.c  miku_async.h  miku_channel.c  miku_channel.h  miku_coroutine.c  miku_coroutine.h  miku_io.h  miku_io_epoll.c  miku_runtime.c  miku_runtime.h  miku_scheduler.c  miku_scheduler.h  miku_threadpool.c  miku_threadpool.h  miku_timer.c  miku_timer.h
src/services/: CMakeLists.txt
src/services/auth/: miku_auth.c  miku_auth.h
src/services/conversation/: miku_conversation.c  miku_conversation.h
src/services/friend/: miku_friend.c  miku_friend.h
src/services/group/: miku_group.c  miku_group.h
src/services/msg/: miku_msg.c  miku_msg.h
src/services/third/: miku_third.c  miku_third.h
src/services/user/: miku_user.c  miku_user.h
src/storage/: CMakeLists.txt  miku_cache.c  miku_cache.h  miku_incr_sync.c  miku_incr_sync.h  miku_kafka.c  miku_kafka.h  miku_mongo.c  miku_mongo.h  miku_msg_store.c  miku_msg_store.h  miku_redis.c  miku_redis.h  miku_seq.c  miku_seq.h  miku_session_cache.c  miku_session_cache.h  miku_storage.c  miku_storage.h
tests/: CMakeLists.txt  miku_test.h  test_benchmark.c  test_foundation.c  test_new_modules.c  test_protocol.c  test_runtime.c  test_services.c  test_storage.c
